src/widgets/widgets/qwidgetlinecontrol.cpp
@@ -1678,7 +1678,7 @@ void QWidgetLineControl::processKeyEvent(QKeyEvent* event)
         }
     }
     else if (event == QKeySequence::Cut) {
-        if (!isReadOnly()) {
+        if (!isReadOnly() && hasSelectedText()) {
             copy();
             del();
         }
